; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_in-addr-util.c_in_addr_is_multicast.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_in-addr-util.c_in_addr_is_multicast.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.in_addr_union = type { i32 }
%struct.TYPE_2__ = type { i32 }

@AF_INET = common dso_local global i32 0, align 4
@AF_INET6 = common dso_local global i32 0, align 4
@EAFNOSUPPORT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @in_addr_is_multicast(i32 %0, %union.in_addr_union* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %union.in_addr_union*, align 8
  store i32 %0, i32* %4, align 4
  store %union.in_addr_union* %1, %union.in_addr_union** %5, align 8
  %6 = load %union.in_addr_union*, %union.in_addr_union** %5, align 8
  %7 = call i32 @assert(%union.in_addr_union* %6)
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @AF_INET, align 4
  %10 = icmp eq i32 %8, %9
  br i1 %10, label %11, label %18

11:                                               ; preds = %2
  %12 = load %union.in_addr_union*, %union.in_addr_union** %5, align 8
  %13 = bitcast %union.in_addr_union* %12 to %struct.TYPE_2__*
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load i32, i32* %14, align 4
  %16 = call i32 @be32toh(i32 %15)
  %17 = call i32 @IN_MULTICAST(i32 %16)
  store i32 %17, i32* %3, align 4
  br label %29

18:                                               ; preds = %2
  %19 = load i32, i32* %4, align 4
  %20 = load i32, i32* @AF_INET6, align 4
  %21 = icmp eq i32 %19, %20
  br i1 %21, label %22, label %26

22:                                               ; preds = %18
  %23 = load %union.in_addr_union*, %union.in_addr_union** %5, align 8
  %24 = bitcast %union.in_addr_union* %23 to i32*
  %25 = call i32 @IN6_IS_ADDR_MULTICAST(i32* %24)
  store i32 %25, i32* %3, align 4
  br label %29

26:                                               ; preds = %18
  %27 = load i32, i32* @EAFNOSUPPORT, align 4
  %28 = sub nsw i32 0, %27
  store i32 %28, i32* %3, align 4
  br label %29

29:                                               ; preds = %26, %22, %11
  %30 = load i32, i32* %3, align 4
  ret i32 %30
}

declare dso_local i32 @assert(%union.in_addr_union*) #1

declare dso_local i32 @IN_MULTICAST(i32) #1

declare dso_local i32 @be32toh(i32) #1

declare dso_local i32 @IN6_IS_ADDR_MULTICAST(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
